<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">API Playground Any SDK </string>
    <!--Activity 1-->
    <string name="tvHorizontalTxt">
This HorizontalScrollview (swipe it sideways) contains text that is 
in the file /res/values/strings.xml. Java code was used to actually to put it here. 
The text was not set in the activity.xml like usual.. Maybe not best codeing practice.
    </string>
    <string name="act2BtnTxt">Next</string>
    <string name="btnCustomTxt">Custom</string>
    <string name="btnDialogCIdeasTxt">Dialog</string>
    <string name="tvSdkTxt">SDK Version: </string>
    <string name="dialogCIdeasTxt">
Programs: Find size of int, float, double and char. Demonstrate the working 
of keyword long. Swap two numbers. Check whether A number is even or odd. 
Check whether A character is vowel or consonant. Find the largest number 
among three numbers. Find all roots of A quadratic equation. Check leap year. 
Check whether A number is positive or negative. Check whether A character 
is an alphabet or not. Calculate the sum of natural numbers. Find factorial 
of A number. Generate multiplication table. Display fibonacci sequence. 
Find GCD of two numbers. Find LCM of two numbers. Display characters from a to 
z using a loop. Count number of digits in an integer. Reverse A number. 
Calculate the power of A number. Check whether A number is Palindrome or not. 
Check whether A number is prime or not. Display prime numbers between two intervals. 
Check Armstrong Number between two intervals. Display factors of A number. 
Create A pyramid structure. Calculator using switch/case. Display Prime numbers 
between intervals using funcion. Check prime or Armstron number using user-defined 
function. Check whether A number can be expressed as sum of two prime numbers.
Find the sum of natural numbers using recursion. Find factorial of A number 
using recursion. Find G.C.D. using recursion. Convert Binary number 
to decimal and vice-versa. Convert Octal to decimal and vice-versa. Convert 
Binary to octal and vice-versa. Reverse sentence using recursion.
    </string>
    <string name="tvDateTxt">Tap Date</string>
    <string name="btnLogTxt">Log</string>
    <string name="btnPressLongTxt">Tap/Long</string>
    <string name="btnNotifyTxt">Notify</string>
    <string name="updateTxtBtnTxt">Update</string>
    <string name="btnPlayAudioTxt">Play</string>
    <string name="btnCreateDocTxt">New Doc</string>
    <string name="btnPopupWindowTxt">Fab</string>
    <string name="popupWindowFabTxt">Fab</string>
    <string name="tvMediaPlayingTxt">Audio playing...</string>
	<string name="tvMediaDoneTxt">MediaPlayer released</string>
	<string name="tvMediaNotPlayingTxt">Nothing happening</string>
    <string name="btnDateTxt">Date</string>
    <string name="tvPrintTxt">Type in the field below, then tap Show</string>
    <string name="etPrintHint">Type here…</string>
    <string name="btnPrintTxt">Show</string>
    <string name="dialogTv1Txt">
Before getting started with C programming, lets get familiarized with 
the language first. C is a general-purpose programming language used for 
wide range of applications from Operating systems like Windows and iOS to 
software that is used for creating 3D movies. C programming is highly efficient. 
That’s the main reason why it’s very popular despite being more than 40 years old. 
Standard C programs are portable. The source code written in one system works 
in another operating system without any change. As mentioned, it’s a good 
language to start learning programming. If you know C programming, you will not just 
understand how your program works, but will also be able to create a mental picture 
on how a computer works.
    </string>
    <string name="dialogTv2Txt">
\nIf you know C, you will not only know how your program works but, 
you will be able to create a mental model on how a computer works (including memory 
management and allocation). You will learn to appreciate 
the freedom that C provides unlike Python and Java.
Understanding C allows you to write programs that you never thought were 
possible before (or at the very least, you will have a broader understanding 
of computer architecture and programming as a whole).
    </string>
    <string name="dialogBtn1Txt">Toast</string>
    <string name="dialogBtn2Txt">Close</string>
    <string name="dialogTitle">Info Dialog</string>
    <string name="dialogAboutTxt">\@2020 CrazyJ36</string>
    <string name="dialogAboutBtnTxt">View my GitHub</string>
    <string name="listHeaderTxt">Notes</string>
    <string name="gridHeaderTxt">Enter Number</string>
    <string name="menuAboutTxt">About</string>
    <string name="menuHideFabTxt">Hide Fab</string>
    <string name="menuExitTxt">Exit</string>
    <string name="menuThemeTxt">Theme</string>
    <string name="my_fileTxt">
Content of my_file.txt. file creating in this files\' directory 
doesn\'t require storage permission
    </string>
    <string name="btnRandomNumbersTxt">Random</string>
    <string-array name="string_array">
         <item>Sun</item>
         <item>Mercury</item>
         <item>Venus</item>
         <item>Earth</item>
    </string-array>
    <string-array name="numbers_array">
         <item>One</item>
         <item>Two</item>
         <item>Three</item>
         <item>Four</item>
         <item>Five</item>
         <item>Six</item>
         <item>Seven</item>
         <item>Eight</item>
         <item>Nine</item>
         <item>Ten</item>
    </string-array>
    <!--Activity 2-->
    <string name="btnCallTxt">Call</string>
    <string name="etCallHint">Phone Number</string>
	<string name="etWebHint">HTTP Website</string>
	<string name="btnWebTxt">Go</string>
	<string name="etSmsHint">Message</string>
	<string name="btnSmsTxt">SMS</string>
    <string name="toggleTxt">Select Toggle</string>
    <string name="toggleOnTxt">Toggle Active</string>
    <string name="toggleOffTxt">Toggle Disabled</string>
    <string name="tvTextSizeSmallTxt">Small text for display</string>
    <string name="tvTextSizeMediumTxt">Medium text for display</string>
    <string name="tvTextSizeLargeTxt">Large text for display</string>
    <!--Shortcuts-->
    <string name="Act1ShortcutShortLabel">1</string>
    <string name="Act1ShortcutLongLabel">Go to Activity 1</string>
    <string name="Act1ShortcutDisabledMsg">Act1 Shortcut Disabled</string>
    <string name="Act2ShortcutShortLabel">2</string>
    <string name="Act2ShortcutLongLabel">Go to Activity 2</string>
    <string name="Act2ShortcutDisabledMsg">Act2 Shortcut Disabled</string>
    <!--Widget-->
    <string name="widgetLaunchBtnTxt">Launch</string>
    <string name="widgetUpdateBtnTxt">Update</string>
</resources>
