<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

  <LinearLayout 
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="4dp"
    android:paddingRight="4dp" >

    <TextView
        android:id="@+id/tvSdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="4dp" />
    
    <HorizontalScrollView
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:paddingTop="4dp" >

			<TextView
			    android:id="@+id/tvHorizontal"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:singleLine="true" />

    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/scrollViewForRawFile"
		android:layout_width="match_parent"
		android:layout_height="128dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:nestedScrollingEnabled="true"
        android:scrollingCache="false" >

	    <TextView
	        android:id="@+id/tvFile"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
            android:drawableTop="@drawable/top_text_drawable" />

    </ScrollView>

	    <Button
	        android:id="@+id/btnCustom"
	        android:layout_width="wrap_content"
	        android:layout_height="36dp"
	        android:layout_marginTop="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginBottom="4dp"
	        android:background="@drawable/custom_button"
	        android:text="@string/btnCustomTxt"
	        android:textColor="@android:color/white" />

    <RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >

	    <Button
	        android:id="@+id/btnDialogCIdeas"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnDialogCIdeasTxt"
			android:layout_alignParentStart="true" />

	    <Button
	        android:id="@+id/btnLog"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnLogTxt"
			android:layout_below="@id/btnDialogCIdeas" />
	    
	    <Button
			android:id="@+id/btnPressLong"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:text="@string/btnPressLongTxt"
			android:layout_toRightOf="@id/btnDialogCIdeas" />

		<Button
			android:id="@+id/btnNotify"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btnNotifyTxt"
            android:layout_toRightOf="@id/btnLog"
			android:layout_below="@id/btnPressLong" />

        <Button
            android:id="@+id/btnUpdateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateTxtBtnTxt"
            android:layout_toRightOf="@id/btnPressLong" />

        <Button
            android:id="@+id/btnRandomNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRandomNumbersTxt"
            android:layout_toRightOf="@id/btnNotify"
            android:layout_below="@id/btnUpdateTxt" />

        <Button
            android:id="@+id/btnPopupWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnUpdateTxt"
            android:text="@string/btnPopupWindowTxt" />

        <Button
            android:id="@+id/btnCreateDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btnPopupWindow"
            android:text="@string/btnCreateDocTxt" />

        <Button
	        android:id="@+id/act2btn"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom|right"
            android:layout_toRightOf="@id/btnRandomNumbers"
            android:layout_below="@id/btnPopupWindow"
			android:text="@string/act2BtnTxt" />

    </RelativeLayout>

    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <Button
			android:id="@+id/btnPlayAudio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btnPlayAudioTxt" />

	    <TextView
			android:id="@+id/tvPlayAudioStatus"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvMediaNotPlayingTxt" />

	</LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/tvDate"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="0.8"
	        android:text="@string/tvDateTxt" />

	    <Button
	        android:id="@+id/btnDate"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="0.2"
	        android:text="@string/btnDateTxt" />

    </LinearLayout>

    <LinearLayout
		android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >

        <CheckBox
			android:id="@+id/chk1"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" />
			
        <CheckBox
			android:id="@+id/chk2"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" />

		<TextView
			android:id="@+id/tvChkStatus"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >
 
        <ToggleButton
            android:id="@+id/toggle1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/toggleTxt" />

        <TextView
            android:id="@+id/tvToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggleTxt" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/tvPrintTxt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
	        android:id="@+id/etPrint"
			android:layout_width="0dp"         
	        android:layout_height="wrap_content"
            android:layout_weight="0.8"
			android:singleLine="true"
	        android:hint="@string/etPrintHint"
	        android:inputType="text" />

        <Button
	        android:id="@+id/btnPrint"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
            android:layout_weight="0.2"
	        android:text="@string/btnPrintTxt" />

    </LinearLayout>

    <TextView
        android:id="@+id/resultsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/fileList"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:nestedScrollingEnabled="true"
        android:scrollingCache="true"
        android:fastScrollEnabled="true" />

    <GridView
        android:id="@+id/gridTextView"
        android:layout_width="160dp"
        android:layout_height="128dp"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:background="#ff505050" />

    <TextView
        android:id="@+id/tvNumberGrid"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="#ff505050" />
 
  </LinearLayout>

</ScrollView>
